--- a/welcome.html
+++ b/welcome.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css" />
 </head>
 <body>
     <h1>Welcome</h1>
     <p>Welcome</p>
+    <p>This is another paragraph</p>
 </body>
-</html>l
+</html>
